--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,144 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>1 Milyon Pixel</title>
-  <link rel="stylesheet" href="/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>1 Milyon Pixel - Pixel Blok Satın Al</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <h1>1 Milyon Pixel Projesi</h1>
-    <div class="canvas-container">
-      <canvas id="pixelCanvas" width="1000" height="1000"></canvas>
+    <div class="container">
+        <!-- Header -->
+        <header class="header">
+            <h1>1 Milyon Pixel</h1>
+            <p class="subtitle">Kendi pixel bloğunuzu satın alın ve web sitenizi tanıtın!</p>
+            <div class="stats">
+                <div class="stat-item">
+                    <span class="stat-number" id="soldBlocks">0</span>
+                    <span class="stat-label">Satılan Blok</span>
+                </div>
+                <div class="stat-item">
+                    <span class="stat-number" id="availableBlocks">10,000</span>
+                    <span class="stat-label">Müsait Blok</span>
+                </div>
+                <div class="stat-item">
+                    <span class="stat-number" id="totalClicks">0</span>
+                    <span class="stat-label">Toplam Tıklama</span>
+                </div>
+            </div>
+        </header>
+
+        <!-- Controls -->
+        <div class="controls">
+            <button id="showPurchaseForm" class="btn btn-primary">💰 Blok Satın Al</button>
+        </div>
+
+        <!-- Pixel Grid Container -->
+        <div class="grid-container" id="gridContainer">
+            <div class="grid-wrapper" id="gridWrapper">
+                <div id="pixelGrid" class="pixel-grid"></div>
+                <div id="selectionBox" class="selection-box"></div>
+            </div>
+        </div>
+
+        <!-- Block Info Panel -->
+        <div id="blockInfo" class="block-info hidden">
+            <div class="block-info-content">
+                <button class="close-btn" id="closeBlockInfo">&times;</button>
+                <div id="blockInfoContent">
+                    <!-- Block details will be loaded here -->
+                </div>
+            </div>
+        </div>
+
+        <!-- Purchase Form Modal -->
+        <div id="purchaseModal" class="modal hidden">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h2>Pixel Blok Satın Al</h2>
+                    <button class="close-btn" id="closePurchaseModal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <form id="purchaseForm" enctype="multipart/form-data">
+                        <div class="form-section">
+                            <h3>Blok Bilgileri</h3>
+                            <div class="form-group">
+                                <label>Seçilen Blok:</label>
+                                <span id="selectedBlockInfo">Lütfen grid üzerinden bir blok seçin</span>
+                            </div>
+                            <input type="hidden" id="blockX" name="blockX">
+                            <input type="hidden" id="blockY" name="blockY">
+                        </div>
+
+                        <div class="form-section">
+                            <h3>Sahip Bilgileri</h3>
+                            <div class="form-group">
+                                <label for="ownerName">Ad Soyad *</label>
+                                <input type="text" id="ownerName" name="ownerName" required maxlength="50">
+                            </div>
+                            <div class="form-group">
+                                <label for="ownerEmail">E-posta *</label>
+                                <input type="email" id="ownerEmail" name="ownerEmail" required>
+                            </div>
+                        </div>
+
+                        <div class="form-section">
+                            <h3>İçerik Bilgileri</h3>
+                            <div class="form-group">
+                                <label for="title">Başlık *</label>
+                                <input type="text" id="title" name="title" required maxlength="100" 
+                                       placeholder="Örn: Harika Web Sitem">
+                            </div>
+                            <div class="form-group">
+                                <label for="url">Web Sitesi URL *</label>
+                                <input type="url" id="url" name="url" required 
+                                       placeholder="https://example.com">
+                            </div>
+                            <div class="form-group">
+                                <label for="description">Açıklama</label>
+                                <textarea id="description" name="description" maxlength="200" 
+                                          placeholder="Kısa açıklama (opsiyonel)"></textarea>
+                            </div>
+                            <div class="form-group">
+                                <label for="backgroundColor">Arkaplan Rengi</label>
+                                <input type="color" id="backgroundColor" name="backgroundColor" value="#ffffff">
+                            </div>
+                            <div class="form-group">
+                                <label for="image">Logo/İkon (Opsiyonel)</label>
+                                <input type="file" id="image" name="image" accept="image/*">
+                                <small>Maksimum 2MB, JPG/PNG/GIF/ICO formatları</small>
+                            </div>
+                        </div>
+
+                        <div class="form-section">
+                            <h3>Ödeme</h3>
+                            <div class="form-group">
+                                <label for="price">Fiyat (TRY)</label>
+                                <input type="number" id="price" name="price" value="300" min="1" step="0.01" readonly>
+                                <small>Her blok 100 pixel içerir (pixel başı 3 TL)</small>
+                            </div>
+                            <div class="payment-info">
+                                <p><strong>Not:</strong> Bu demo versiyonunda ödeme simüle edilmektedir. 
+                                Gerçek uygulamada PayPal veya Stripe entegrasyonu olacaktır.</p>
+                            </div>
+                        </div>
+
+                        <div class="form-actions">
+                            <button type="button" class="btn btn-secondary" id="cancelPurchase">İptal</button>
+                            <button type="submit" class="btn btn-primary">Satın Al</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+
+        <!-- Loading Overlay -->
+        <div id="loadingOverlay" class="loading-overlay hidden">
+            <div class="loading-spinner"></div>
+            <p>Yükleniyor...</p>
+        </div>
     </div>
-    <div id="purchaseModal" class="modal">
-      <!-- Modal içeriği -->
-    </div>
-  </div>
-  <script src="/script.js"></script>
+
+    <script src="script.js"></script>
 </body>
 </html>
