--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
         <div id="purchaseModal" class="modal hidden">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h2>Pixel Blok Satın Al</h2>
+                    <h2>Pixel Blok Başvurusu</h2>
                     <button class="close-btn" id="closePurchaseModal">&times;</button>
                 </div>
                 <div class="modal-body">
@@ -111,21 +111,20 @@
                         </div>
 
                         <div class="form-section">
-                            <h3>Ödeme</h3>
+                            <h3>Onay Süreci ve Ödeme</h3>
                             <div class="form-group">
                                 <label for="price">Fiyat (TRY)</label>
                                 <input type="number" id="price" name="price" value="300" min="1" step="0.01" readonly>
                                 <small>Her blok 100 pixel içerir (pixel başı 3 TL)</small>
                             </div>
                             <div class="payment-info">
-                                <p><strong>Not:</strong> Bu demo versiyonunda ödeme simüle edilmektedir. 
-                                Gerçek uygulamada PayPal veya Stripe entegrasyonu olacaktır.</p>
+                                <p><strong>Önemli Not:</strong> "Onay İçin Gönder" butonuna tıkladıktan sonra talebiniz admin tarafından incelenecektir. Onaylandığı takdirde size bir e-posta ile IBAN bilgisi gönderilecektir. Ödemeyi yaptıktan sonra bloğunuz aktif hale gelecektir.</p>
                             </div>
                         </div>
 
                         <div class="form-actions">
                             <button type="button" class="btn btn-secondary" id="cancelPurchase">İptal</button>
-                            <button type="submit" class="btn btn-primary">Satın Al</button>
+                            <button type="submit" class="btn btn-primary">Onay İçin Gönder</button>
                         </div>
                     </form>
                 </div>
@@ -139,6 +138,7 @@
         </div>
     </div>
 
+    <script src="/socket.io/socket.io.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
